# bank-rag

./: README.md  pyproject.toml  utils.py
prompts/: naive_rag.txt
src/: generating.py  loading.py  main.py  preprocessing.py  vector_database.py
src/apis/: main.py
